tdf#105026 Remove wrong constraint in PERMUTATIONA.

With permutations with repetitions, argument selection may
be larger than argument elements.
Probably inadvertently copied from PERMUT; has been there from
pre-git.

Change-Id: Icdee18eca647fb278f140630e45844684a1e3046
Reviewed-on: https://gerrit.libreoffice.org/32569
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 25625f18a282209235214674f2b81604ecd067ad)